--- a/public/chat/index.html
+++ b/public/chat/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chat Assistant</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/chat/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#1e3a8a">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <!-- Vercel deployment meta tags -->
+    <meta name="description" content="AI-powered chat assistant for website content">
+    <meta property="og:title" content="AI Chat Assistant">
+    <meta property="og:description" content="Get answers about website content using our AI assistant">
+    <meta property="og:type" content="website">
+    <script>
+        // Ensure we're using the correct base URL in production
+        window.API_BASE_URL = window.location.origin;
+    </script>
 </head>
 <body>
     <div id="chat-container">
@@ -24,6 +33,6 @@
             <button id="send-button" aria-label="Send message"></button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="/chat/script.js"></script>
 </body>
 </html>
