Added link tree

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - AI Chatbot</title>
+    <title>Admin Dashboard - AI Chatbot by Talha-SE</title>
     <link rel="stylesheet" href="/admin/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#1e3a8a">
-    <meta name="description" content="AI Chatbot Admin Dashboard - Manage and configure your AI chatbot">
+    <meta name="description" content="AI Chatbot Admin Dashboard by Talha-SE - Commercial License Required">
+    <meta name="author" content="Talha-SE">
+    <meta name="copyright" content="© 2025 Talha-SE. All rights reserved.">
     <!-- Vercel deployment meta tags -->
     <meta property="og:title" content="AI Chatbot Admin Dashboard">
     <meta property="og:description" content="Manage your AI chatbot, crawl websites, and monitor performance">
@@ -25,6 +27,7 @@
         <div class="header">
             <h1>Admin Dashboard</h1>
             <p>Manage your AI chatbot, crawl websites, and monitor performance</p>
+            <small style="opacity: 0.8; font-size: 0.9rem;">© 2025 Talha-SE - Commercial License Required</small>
         </div>
 
         <!-- Quick Stats -->
