--- a/public/link-tree.html
+++ b/public/link-tree.html
@@ -425,9 +425,10 @@
         </div>
 
         <div class="footer">
-            <p>© 2025 AI Chatbot Project</p>
+            <p>© 2025 Talha-SE - AI Chatbot Project</p>
             <p>Made with ❤️</p>
-            <p>Licensed under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a></p>
+            <p>Licensed under <a href="/LICENSE" target="_blank">Commercial License</a> - All Rights Reserved</p>
+            <p><small>Commercial use requires paid license - Contact: rtalha.work@gmail.com</small></p>
         </div>
     </div>
 </body>
